# TamTestCode

./: .gitignore
Qml/QmlListView/: MediaPlayer.qml  QmlListView.pro  main.cpp  main.qml  mylistmodel.cpp  mylistmodel.h  mywork.cpp  mywork.h  qml.qrc
Qt6.2.4/QTThreadPoolTest/: CMakeLists.txt  QTThreadPoolTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  mywork.cpp  mywork.h
VS2019/ACEInfoBridge/: ACEInfoBridge.sln
VS2019/BitTest/: BitTest.cpp  BitTest.sln  BitTest.vcxproj  BitTest.vcxproj.filters
VS2019/CaiHong/: CaiHong.sln  Invision redis报文.txt  海康配置.txt
VS2019/IOT_Driver/: IOT_Driver.sln  cookie.txt
VS2019/JiaShaoSDK/: JiaShaoSDK.sln
VS2019/MQTT-Client/: MQTT-Client.sln
VS2019/UDP_Server/: UDP_Server.sln
VS2019/YYCDianHua/: YYCDianHua.sln  iP电话报文.txt  小犇科技-IP账号状态外送私有协议v1.02(1).doc
VS2019/YaYunJianKang/: 152.txt  YaYunJianKang.sln  新建文本文档.txt
VS2019/YongJinDianHua/: SIP-BS-api-cn-3.2.0_20190524.docx  YongJinDianHua.sln  涌金电话接口报文.txt  白峰岭紧急电话基础资料(1)(1).xlsx
VS2019/access/: access.sln  access.vcxproj  main.cpp  out.txt
VS2019/cjson/: cJSON.c  cJSON.cpp
VS2019/cmake_test/: CMakeLists.txt
VS2019/cmake_test/include/co/: co.h  def.h  fast.h  fastream.h  fastring.h  god.h  json.h  log.h  tcp.h
VS2019/cmake_test/include/co/co/: wait_group.h
VS2019/cmake_test/src/: main.cpp
VS2019/co_test/: co_test.cpp  co_test.sln  co_test.vcxproj  co_test.vcxproj.filters
VS2019/get/: get.sln  get.vcxproj  get.vcxproj.filters  main.cpp
VS2019/http_server/: http_server.cpp  http_server.sln  http_server.vcxproj
drive_MetroView/: .gitignore  README.md
(+186 files in other folders)
